language/move-lang/tests/move_check/typing/bind_pop_resource.exp
error: 

   ┌── tests/move_check/typing/bind_pop_resource.move:5:13 ───
   │
 5 │         let _: R = R{};
   │             ^ Cannot ignore resource values. The value must be used
   ·
 5 │         let _: R = R{};
   │                - The type: '0x8675309::M::R'
   ·
 2 │     resource struct R {}
   │     -------- Is found to be a non-copyable type here
   │

error: 

   ┌── tests/move_check/typing/bind_pop_resource.move:9:14 ───
   │
 9 │         let (_, _):(R, R) = (R{}, R{});
   │              ^ Cannot ignore resource values. The value must be used
   ·
 9 │         let (_, _):(R, R) = (R{}, R{});
   │                     - The type: '0x8675309::M::R'
   ·
 2 │     resource struct R {}
   │     -------- Is found to be a non-copyable type here
   │

error: 

   ┌── tests/move_check/typing/bind_pop_resource.move:9:17 ───
   │
 9 │         let (_, _):(R, R) = (R{}, R{});
   │                 ^ Cannot ignore resource values. The value must be used
   ·
 9 │         let (_, _):(R, R) = (R{}, R{});
   │                        - The type: '0x8675309::M::R'
   ·
 2 │     resource struct R {}
   │     -------- Is found to be a non-copyable type here
   │

